# sphotel1

./: .env.example  .gitignore  Makefile  Menu-data.csv  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  items_114325_2026_03_23_02_22_23.csv  menu_import.csv  menu_loader.py  menu_patch.py  menu_processor.py  updated_menu_import.csv
backend/: Dockerfile  alembic.ini  menu.csv  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema_tenants_users_audit_logs.py  0002_tenant_feature_flags.py  0003_add_user_role_enum.py  0004_add_preferences_to_tenant_users.py  0005_add_onboarding_completed_to_tenants.py  0006_create_menu_items.py  0007_tables_sections.py  0008_bills_and_kot.py  0009_bill_items.py  0010_menu_variants.py  0011_online_price.py  0012_bill_waiter_kot_ready.py  0013_user_short_code.py  0014_kot_ready_item_ids.py  0015_print_jobs.py  0016_print_template.py  0017_print_agents.py  0018_parcel_price_override_vendors.py  0019_bill_number.py  0020_menu_variants_vendor_prices.py  0021_telegram_settings.py  0022_custom_reports.py  0023_custom_reports_extend.py  0024_fixed_report_configs.py  0025_printer_role.py  0026_fix_report_tenant_id_to_varchar.py  0027_keyboard_shortcuts.py  0028_bill_close_ux_flag.py  0029_bill_number_daily_reset.py  0030_bill_number_nullable.py  0031_add_cancelled_bill_status.py  c171d4c48c3a_add_pwa_settings.py
backend/app/: main.py
backend/scripts/: import_menu.py  seed_menu_items.py  seed_super_admin.py
backend/tests/: conftest.py  test_models_schema.py
(+379 files in other folders)
